--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,7 @@ buildscript {
     dependencies {
       classpath "io.spring.gradle:dependency-management-plugin:0.6.0.RELEASE"
       classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.0.RELEASE")
-      classpath 'com.github.jengelman.gradle.plugins:gradle-processes:0.3.0'
-      classpath 'com.bmuschko:gradle-docker-plugin:3.0.1'
+      classpath 'com.bmuschko:gradle-docker-plugin:3.0.3'
     }
 }
 
@@ -25,6 +24,8 @@ apply plugin: 'maven-publish'
 apply plugin: "spring-boot"
 apply plugin: "io.spring.dependency-management"
 apply plugin: 'jacoco'
+
+apply from: 'build-docker.gradle'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -131,6 +132,9 @@ task staticResources(type: Copy) {
     })
 }
 
+task wrapper(type: Wrapper) {
+    gradleVersion = '3.0'
+}
 
 processResources.dependsOn staticResources
 build.dependsOn jacocoTestReport
