update API service

--- a/build.gradle
+++ b/build.gradle
@@ -122,6 +122,12 @@ dependencies {
 
 }
 
+processResources {
+    filesMatching('**/bootstrap.yaml') {
+        filter(org.apache.tools.ant.filters.ReplaceTokens, tokens: [version: project.property("version")])
+    }
+}
+
 
 task staticResources(type: Copy) {
 
