Fix email configuration in tests

--- a/src/test/resources/unittests.properties
+++ b/src/test/resources/unittests.properties
@@ -36,8 +36,8 @@ rp.cache.project.info=10
 
 ## EMail Server configuration (temporary solution)
 rp.email.enabled=true
-rp.email.server=SOME_SERVER
-rp.email.port=25
+rp.email.server=localhost
+rp.email.port=10025
 rp.email.protocol=smtp
 rp.email.from=reportportal@devmail.epam.com
 rp.email.auth=false
