--- a/build.gradle
+++ b/build.gradle
@@ -121,6 +121,7 @@ dependencies {
 
     testCompile 'org.apache.commons:commons-math3:3.5'
     testCompile 'org.springframework.boot:spring-boot-starter-test'
+    testCompile 'dumbster:dumbster:1.6'
 
 }
 
