--- a/build-quality.gradle
+++ b/build-quality.gradle
@@ -4,3 +4,9 @@ findbugs {
     sourceSets = [sourceSets.main]
     reportLevel = "high"
 }
+tasks.withType(org.gradle.api.plugins.quality.FindBugs) {
+    reports {
+        xml.enabled false
+        html.enabled true
+    }
+}
