--- a/build.gradle
+++ b/build.gradle
@@ -48,23 +48,20 @@ project.ext {
 repositories {
     mavenCentral()
     maven { url  "http://dl.bintray.com/epam/reportportal" }
-
-    maven { url 'https://repo.spring.io/libs-milestone' }
-
     maven { url "http://jasperreports.sourceforge.net/maven2" }
     maven { url "http://jaspersoft.artifactoryonline.com/jaspersoft/third-party-ce-artifacts" }
 }
 
 dependencyManagement {
     imports {
-        mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Camden.RC1"
+        mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Camden.RELEASE"
 
     }
 }
 
 dependencies {
-    compile 'com.epam.reportportal:commons-model:2.6.0'
-    compile 'com.epam.reportportal:commons-dao:2.6.1'
+    compile 'com.epam.reportportal:commons-model:2.6.2'
+    compile 'com.epam.reportportal:commons-dao:2.6.2'
     compile 'com.epam.reportportal:commons-rules:2.6.0'
     compile 'com.epam.reportportal:commons:2.6.0'
 
@@ -72,22 +69,20 @@ dependencies {
     compile 'org.jasypt:jasypt:1.9.2'
 
 
-    compile 'commons-fileupload:commons-fileupload:1.3.1'
-    compile 'commons-validator:commons-validator:1.4.1'
+    compile 'commons-fileupload:commons-fileupload:1.3.2'
+    compile 'commons-validator:commons-validator:1.5.1'
     compile 'org.slf4j:slf4j-api:1.7.21'
     compile 'org.apache.commons:commons-lang3:3.2.1'
-    compile 'org.mongodb:mongo-java-driver:3.0.1'
     compile "ch.qos.logback:logback-classic:${logback}"
     compile 'joda-time:joda-time:2.3'
     compile('org.hibernate:hibernate-validator:5.0.2.Final') {
         exclude(module: 'validation-api')
     }
-    compile 'net.coobird:thumbnailator:0.4.7'
+    compile 'net.coobird:thumbnailator:0.4.8'
     compile 'com.sun.mail:javax.mail:1.5.4'
     compile 'org.apache.velocity:velocity:1.7'
 
-    compile 'com.rallydev.rest:rally-rest-api:2.1.1'
-    compile 'commons-codec:commons-codec:1.6'
+//    compile 'commons-codec:commons-codec:1.6'
 
     compile 'org.springframework.cloud:spring-cloud-config-client'
     compile("org.springframework.retry:spring-retry")
@@ -117,7 +112,7 @@ dependencies {
     testCompile 'org.mockito:mockito-all:2.0.2-beta'
 
     testCompile 'com.jayway.jsonpath:json-path:1.2.0'
-    testCompile 'com.github.fakemongo:fongo:2.0.1'
+    testCompile 'com.github.fakemongo:fongo:2.0.9'
 
     testCompile 'org.apache.commons:commons-math3:3.5'
     testCompile 'org.springframework.boot:spring-boot-starter-test'
