--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,9 @@ buildscript {
         }
     }
     dependencies {
-      classpath "io.spring.gradle:dependency-management-plugin:0.6.0.RELEASE"
-      classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.0.RELEASE")
-      classpath 'com.bmuschko:gradle-docker-plugin:3.0.3'
+        classpath "io.spring.gradle:dependency-management-plugin:0.6.0.RELEASE"
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.0.RELEASE")
+        classpath 'com.bmuschko:gradle-docker-plugin:3.0.3'
     }
 }
 
@@ -47,7 +47,7 @@ project.ext {
 
 repositories {
     mavenCentral()
-    maven { url  "http://dl.bintray.com/epam/reportportal" }
+    maven { url "http://dl.bintray.com/epam/reportportal" }
 
     maven { url 'https://repo.spring.io/libs-milestone' }
 
@@ -60,6 +60,10 @@ dependencyManagement {
         mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Camden.RC1"
 
     }
+}
+
+configurations {
+    api
 }
 
 dependencies {
@@ -111,6 +115,7 @@ dependencies {
     compile 'io.springfox:springfox-swagger2:2.3.0'
     compile 'io.springfox:springfox-swagger-ui:2.3.0'
 
+    api 'org.jacoco:org.jacoco.agent:0.7.7.201606060606'
 
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'junit:junit:4.12'
@@ -144,6 +149,27 @@ task staticResources(type: Copy) {
 task wrapper(type: Wrapper) {
     gradleVersion = '3.0'
 }
+
+//Start section for external jacoco test report
+tasks.withType(JavaCompile) {
+    if (System.getProperty("DEBUG", "false") == "true") {
+        options.debug = true
+        options.compilerArgs = ["-g"]
+    }
+}
+
+task copyJacocoAgentToLibs(type: Copy) {
+    if (System.getProperty("DEBUG", "false") == "true") {
+        from {
+            configurations.api.collect { zipTree(it) }
+        }
+        into "${project.buildDir}/libs/"
+        include 'jacocoagent.jar'
+    }
+}
+
+jar.dependsOn copyJacocoAgentToLibs
+//End section for external jacoco test report
 
 processResources.dependsOn staticResources
 build.dependsOn jacocoTestReport
