update api service

--- a/src/main/resources/bootstrap.yaml
+++ b/src/main/resources/bootstrap.yaml
@@ -15,3 +15,5 @@ spring:
       retry:
         max-attempts: 20
         initial-interval: 3000
+      allow-override: true
+      override-system-properties: false
