--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ repositories {
 
 dependencyManagement {
     imports {
-        mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Camden.RELEASE"
+        mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Camden.SR1"
 
     }
 }
@@ -76,14 +76,14 @@ dependencies {
     compile 'commons-fileupload:commons-fileupload:1.3.2'
     compile 'commons-validator:commons-validator:1.5.1'
     compile 'org.slf4j:slf4j-api:1.7.21'
-    compile 'org.apache.commons:commons-lang3:3.2.1'
+
     compile "ch.qos.logback:logback-classic:${logback}"
     compile 'joda-time:joda-time:2.3'
     compile('org.hibernate:hibernate-validator:5.0.2.Final') {
         exclude(module: 'validation-api')
     }
     compile 'net.coobird:thumbnailator:0.4.8'
-    compile 'com.sun.mail:javax.mail:1.5.4'
+    compile 'com.sun.mail:javax.mail:1.5.6'
     compile 'org.apache.velocity:velocity:1.7'
 
     compile 'org.springframework.cloud:spring-cloud-config-client'
@@ -99,8 +99,8 @@ dependencies {
     compile 'org.springframework.cloud:spring-cloud-starter-oauth2'
 
 
-    compile 'org.apache.poi:poi:3.14'
-    compile 'net.sf.jasperreports:jasperreports:6.3.0'
+    compile 'org.apache.poi:poi:3.15'
+    compile 'net.sf.jasperreports:jasperreports:6.3.1'
 
     compile 'javax.inject:javax.inject:1'
     compile 'com.google.code.findbugs:annotations:3.0.1'
@@ -114,10 +114,10 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-all:2.0.2-beta'
 
-    testCompile 'com.jayway.jsonpath:json-path:1.2.0'
+    testCompile 'com.jayway.jsonpath:json-path:2.2.0'
     testCompile 'com.github.fakemongo:fongo:2.0.9'
 
-    testCompile 'org.apache.commons:commons-math3:3.5'
+    testCompile 'org.apache.commons:commons-math3:3.6.1'
     testCompile 'org.springframework.boot:spring-boot-starter-test'
     testCompile 'com.bitmechanic:dumbster:1.9.0.2'
 
