--- a/build.gradle
+++ b/build.gradle
@@ -66,9 +66,9 @@ configurations {
 }
 
 dependencies {
-    compile 'com.epam.reportportal:commons-model:2.6.2'
-    compile 'com.epam.reportportal:commons-dao:2.7.0-ALPHA-5'
-    compile 'com.epam.reportportal:commons-rules:2.6.0'
+    compile 'com.epam.reportportal:commons-model:2.7.0-ALPHA-2'
+    compile 'com.epam.reportportal:commons-dao:2.7.0-ALPHA-6'
+    compile 'com.epam.reportportal:commons-rules:2.7.0-ALPHA-1'
     compile 'com.epam.reportportal:commons:2.6.1'
 
     compile 'org.jasypt:jasypt:1.9.2'
