--- a/build.gradle
+++ b/build.gradle
@@ -69,10 +69,7 @@ configurations {
 dependencies {
 //    compile 'com.epam.reportportal:commons-model:2.7.0-ALPHA-9'
     compile 'com.epam.reportportal:commons-dao:2.7.0-bdd'
-    compile ('com.epam.reportportal:commons-rules:2.7.0-ALPHA-4'){
-        exclude module: 'com.epam.reportportal:commons-rules'
-
-    }
+    compile ('com.epam.reportportal:commons-rules:2.7.0-bdd')
     compile 'com.epam.reportportal:commons:2.6.1'
 
     compile 'org.jasypt:jasypt:1.9.2'
