--- a/build.gradle
+++ b/build.gradle
@@ -96,6 +96,8 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-redis'
     compile 'org.springframework.cloud:spring-cloud-starter-oauth2'
 
+    compile 'com.github.mongobee:mongobee:0.12'
+
 
     compile 'net.sf.jasperreports:jasperreports:6.3.1'
     //JasperReport's export to XLS uses Apache POI. Reports 6.3.1 needs version NOT
