--- a/docker/Dockerfile-develop
+++ b/docker/Dockerfile-develop
@@ -1,6 +1,10 @@
 FROM frolvlad/alpine-oraclejdk8:slim
 
 MAINTAINER Andrei Varabyeu <andrei_varabyeu@epam.com>
+LABEL version="@version@"
+LABEL description="@description@"
+
+ENV JAVA_OPTS="-Xmx1g"
 
 RUN apk --no-cache add ttf-droid
 
@@ -10,4 +14,4 @@ ADD ${project.name}-${version}.jar app.jar
 RUN sh -c 'touch /app.jar'
 EXPOSE 8080
 
-ENTRYPOINT ["java","-Xmx1g","-Djava.security.egd=file:/dev/./urandom", "-jar","/app.jar"]
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom", "-jar","/app.jar"]
