--- a/docker/Dockerfile-develop
+++ b/docker/Dockerfile-develop
@@ -4,7 +4,7 @@ MAINTAINER Andrei Varabyeu <andrei_varabyeu@epam.com>
 LABEL version="@version@"
 LABEL description="@description@"
 
-#ENV JAVA_OPTS="-Xmx1g"
+ENV JAVA_OPTS="-Xmx1g"
 
 RUN apk --no-cache add ttf-droid
 
@@ -14,4 +14,4 @@ ADD ${project.name}-${version}.jar app.jar
 RUN sh -c 'touch /app.jar'
 EXPOSE 8080
 
-ENTRYPOINT ["java","-Xmx1g","-Djava.security.egd=file:/dev/./urandom", "-jar","/app.jar"]
+ENTRYPOINT ["java","$JAVA_OPTS","-Djava.security.egd=file:/dev/./urandom", "-jar","/app.jar"]
