update release dockerfile

--- a/docker/Dockerfile-release
+++ b/docker/Dockerfile-release
@@ -1,6 +1,10 @@
 FROM frolvlad/alpine-oraclejdk8:slim
 
 MAINTAINER Andrei Varabyeu <andrei_varabyeu@epam.com>
+LABEL version="@version@"
+LABEL description="@description@"
+
+ENV JAVA_OPTS="-Xmx1g"
 
 RUN apk --no-cache add ttf-droid
 
@@ -8,4 +12,4 @@ VOLUME /tmp
 ADD https://dl.bintray.com/epam/reportportal/com/epam/reportportal/${project.name}/${version}/${project.name}-${version}.jar /app.jar
 RUN sh -c 'touch /app.jar'
 EXPOSE 8080
-ENTRYPOINT ["java","-Xmx256m","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+ENTRYPOINT ["java","$JAVA_OPTS","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
