update build scripts

--- a/docker/Dockerfile-release
+++ b/docker/Dockerfile-release
@@ -4,12 +4,14 @@ MAINTAINER Andrei Varabyeu <andrei_varabyeu@epam.com>
 LABEL version="@version@"
 LABEL description="@description@"
 
+ENV APP_FILE @name@-@version@
+ENV APP_DOWNLOAD_URL https://dl.bintray.com/epam/reportportal/com/epam/reportportal/@name@/@version@/$APP_FILE.zip
 ENV JAVA_OPTS="-Xmx1g"
 
 RUN apk --no-cache add ttf-droid
 
 VOLUME /tmp
-ADD https://dl.bintray.com/epam/reportportal/com/epam/reportportal/${project.name}/${version}/${project.name}-${version}.jar /app.jar
+ADD $APP_DOWNLOAD_URL /app.jar
 RUN sh -c 'touch /app.jar'
 EXPOSE 8080
 ENTRYPOINT ["java","$JAVA_OPTS","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
