--- a/build.gradle
+++ b/build.gradle
@@ -26,14 +26,10 @@ apply plugin: 'jacoco'
 apply from: 'build-quality.gradle'
 apply from: 'build-docker.gradle'
 apply from: 'https://raw.githubusercontent.com/reportportal/gradle-scripts/master/build-info.gradle'
-apply from: 'release-service.gradle'
+apply from: 'https://raw.githubusercontent.com/reportportal/gradle-scripts/master/release-service.gradle'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
-
-
-description = 'EPAM Report portal. Main API Service'
-
 
 project.ext {
     limits = [
