--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=2.7.2-SNAPSHOT
+version=2.7.2
 description=EPAM Report portal. Main API Service
 logback=1.1.7
 dockerServerUrl=tcp://localhost:2375
