--- a/docker/Dockerfile-release
+++ b/docker/Dockerfile-release
@@ -14,4 +14,4 @@ VOLUME /tmp
 ADD $APP_DOWNLOAD_URL /app.jar
 RUN sh -c 'touch /app.jar'
 EXPOSE 8080
-ENTRYPOINT ["java","$JAVA_OPTS","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar"]
