--- a/docker/Dockerfile-develop
+++ b/docker/Dockerfile-develop
@@ -14,4 +14,5 @@ ADD ${project.name}-${version}.jar app.jar
 RUN sh -c 'touch /app.jar'
 EXPOSE 8080
 
-ENTRYPOINT ["java","$JAVA_OPTS","-Djava.security.egd=file:/dev/./urandom", "-jar","/app.jar"]
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar"]
+
