--- a/docker/Dockerfile-test
+++ b/docker/Dockerfile-test
@@ -1,13 +1,15 @@
 FROM frolvlad/alpine-oraclejdk8:slim
 
 MAINTAINER Andrei Varabyeu <andrei_varabyeu@epam.com>
+LABEL version="@version@"
+LABEL description="@description@"
 
 RUN apk --no-cache add ttf-droid
 
 ENV JAVA_OPTS="-Xmx1g -javaagent:/jacocoagent.jar=destfile=/jacoco/jacoco.exec,append=false"
 
 VOLUME /tmp
-ADD ${project.name}-${version}.jar app.jar
+ADD @name@-@version@.jar app.jar
 ADD jacocoagent.jar jacocoagent.jar
 
 RUN sh -c 'touch /app.jar'
