introduce initial consul support. Get rid of config server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-server.port=8585
-server.contextPath=/v1
+spring.profiles.active=${rp.profiles}
 
-security.oauth2.resource.userInfoUri=http://localhost:9999/sso/me
-security.oauth2.client.accessTokenUri=http://localhost:9999/sso/oauth/token
-security.oauth2.client.userAuthorizationUri=http://localhost:9999/sso/oauth/authorize
+server.port=8585
+server.contextPath=/api/v1
+
+security.oauth2.resource.userInfoUri=http://localhost:9999/uat/sso/me
+security.oauth2.client.accessTokenUri=http://localhost:9999/uat/sso/oauth/token
+security.oauth2.client.userAuthorizationUri=http://localhost:9999/uat/sso/oauth/authorize
 security.oauth2.client.clientId=internal
 security.oauth2.client.clientSecret=internal_man
 
@@ -17,10 +19,6 @@ endpoints.info.enabled=true
 endpoints.info.sensitive=false
 endpoints.health.enabled=true
 endpoints.health.sensitive=false
-
-eureka.instance.hostname=${HOSTNAME:localhost}
-eureka.instance.statusPageUrlPath=/v1/admin/info
-eureka.instance.healthCheckUrlPath=/v1/admin/health
 
 rp.mongo.host=${reportportal.mongo.host:docker.local}
 rp.mongo.port=27017
