--- a/build.gradle
+++ b/build.gradle
@@ -85,10 +85,12 @@ dependencies {
     compile 'com.sun.mail:javax.mail:1.5.6'
     compile 'org.apache.velocity:velocity:1.7'
 
-    compile 'org.springframework.cloud:spring-cloud-config-client'
+//    compile 'org.springframework.cloud:spring-cloud-config-client'
     compile 'org.springframework.retry:spring-retry'
 
     compile 'org.springframework.cloud:spring-cloud-starter-eureka'
+    compile 'org.springframework.cloud:spring-cloud-starter-consul-discovery'
+
     compile 'org.springframework.cloud:spring-cloud-starter-security'
 
 
