--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 spring:
   profiles:
     ## Default one is still Eureka
-    active: {rp.profiles:eureka}
+    active: ${rp.profiles:eureka}
   cloud:
     consul:
       host: localhost
