--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 server.port=8585
 server.contextPath=/api/v1
 
-security.oauth2.resource.userInfoUri=http://localhost:9999/uat/sso/me
-security.oauth2.client.accessTokenUri=http://localhost:9999/uat/sso/oauth/token
-security.oauth2.client.userAuthorizationUri=http://localhost:9999/uat/sso/oauth/authorize
+rp.uat.serviceUrl=http://localhost:9999/uat
+security.oauth2.resource.userInfoUri=${rp.uat.serviceUrl}/sso/me
+security.oauth2.client.accessTokenUri=${rp.uat.serviceUrl}/sso/oauth/token
+security.oauth2.client.userAuthorizationUri=${rp.uat.serviceUrl}/uat/sso/oauth/authorize
 security.oauth2.client.clientId=internal
 security.oauth2.client.clientSecret=internal_man
 
