--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ endpoints.info.sensitive=false
 endpoints.health.enabled=true
 endpoints.health.sensitive=false
 
-rp.mongo.host=${reportportal.mongo.host:docker.local}
+rp.mongo.host=${reportportal.mongo.host:localhost}
 rp.mongo.port=27017
 rp.mongo.dbName=reportportal
 #rp.mongo.user: user
@@ -36,7 +36,7 @@ rp.mongo.writeTimeout=0
 rp.mongo.writeNumber=1
 rp.mongo.writeFsync=false
 
-spring.redis.host=${reportportal.redis.host:docker.local}
+spring.redis.host=${reportportal.redis.host:localhost}
 spring.redis.port=6379
 
 
