--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ endpoints.info.sensitive=false
 endpoints.health.enabled=true
 endpoints.health.sensitive=false
 
-rp.mongo.host=${reportportal.mongo.host:localhost}
+rp.mongo.host=${rp.mongo.host:localhost}
 rp.mongo.port=27017
 rp.mongo.dbName=reportportal
 #rp.mongo.user: user
