--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -73,7 +73,7 @@ rp.email.from=reportportal@devmail.epam.com
 rp.email.auth=false
 rp.email.debug=false
 rp.email.account=
-rp.password=
+rp.email.password=
 
 ##Acceptance index rate for auto-bug analyzer
 rp.issue.analyzer.rate=95
