prepare for the release

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ project.ext {
             'class'      : 87
     ]
     isDebugMode = System.getProperty("DEBUG", "false") == "true"
+    releaseMode = project.hasProperty("releaseMode")
 }
 
 repositories {
@@ -50,7 +51,9 @@ repositories {
     maven { url "http://dl.bintray.com/epam/reportportal" }
     maven { url "http://jasperreports.sourceforge.net/maven2" }
     maven { url "http://jaspersoft.artifactoryonline.com/jaspersoft/third-party-ce-artifacts" }
-    maven { url "https://jitpack.io" }
+    if (!releaseMode) {
+        maven { url 'https://jitpack.io' }
+    }
 }
 
 dependencyManagement {
@@ -69,12 +72,17 @@ configurations.all {
 }
 
 dependencies {
-
-    compile 'com.github.reportportal:commons-model:872821f'
-    compile('com.github.reportportal:commons-dao:517847ad07')
-    compile('com.github.reportportal:commons-rules:56fe3ab074')
-
-    compile 'com.epam.reportportal:commons:2.6.1'
+    if (releaseMode) {
+        compile 'com.epam.reportportal:commons-dao:3.0.0-BETA-1'
+        compile 'com.epam.reportportal:commons-rules:3.0.0-BETA-1'
+        compile 'com.epam.reportportal:commons-model:3.0.0-BETA-1'
+        compile 'com.epam.reportportal:commons:3.0.0-BETA-2'
+    } else {
+        compile 'com.github.reportportal:commons-model:872821f'
+        compile('com.github.reportportal:commons-dao:517847ad07')
+        compile('com.github.reportportal:commons-rules:56fe3ab074')
+        compile 'com.epam.reportportal:commons:2.6.1'
+    }
 
     compile 'org.jasypt:jasypt:1.9.2'
 
