--- a/src/main/resources/bootstrap.yaml
+++ b/src/main/resources/bootstrap.yaml
@@ -7,7 +7,7 @@ info:
 
 spring:
   profiles:
-    ## Default one is still Eureka
-    active: ${rp.profiles:eureka}
+    ## Profiles list
+    active: ${rp.profiles:}
   application:
     name: api
