--- a/docker/Dockerfile-release
+++ b/docker/Dockerfile-release
@@ -1,4 +1,4 @@
-FROM openjdk:alpine
+FROM openjdk:8-jre-alpine
 
 LABEL maintainer "Andrei Varabyeu <andrei_varabyeu@epam.com>"
 LABEL version="@version@"
