[Gradle Release Plugin] - new version commit:  '3.0.0-SNAPSHOT'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=3.0.0-BETA-3
+version=3.0.0-SNAPSHOT
 description=EPAM Report portal. Main API Service
 logback=1.1.11
 dockerServerUrl=tcp://localhost:2375
