make health endpoint sensitive

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ endpoints.enabled=false
 endpoints.info.enabled=true
 endpoints.info.sensitive=false
 endpoints.health.enabled=true
-endpoints.health.sensitive=false
+endpoints.health.sensitive=true
 
 rp.mongo.host=localhost
 rp.mongo.port=27017
