--- a/docker/Dockerfile-release
+++ b/docker/Dockerfile-release
@@ -1,6 +1,6 @@
-FROM openjdk:alpine
+FROM frolvlad/alpine-oraclejdk8:slim
 
-LABEL maintainer "Andrei Varabyeu <andrei_varabyeu@epam.com>"
+MAINTAINER Andrei Varabyeu <andrei_varabyeu@epam.com>
 LABEL version="@version@"
 LABEL description="@description@"
 
@@ -8,10 +8,10 @@ ENV APP_FILE @name@-@version@
 ENV APP_DOWNLOAD_URL https://dl.bintray.com/epam/reportportal/com/epam/reportportal/@name@/@version@/$APP_FILE.jar
 ENV JAVA_OPTS="-Xmx1g"
 
-RUN apk --no-cache add ttf-droid openssl
+RUN apk --no-cache add ttf-droid
 
 VOLUME /tmp
-RUN wget -O /app.jar $APP_DOWNLOAD_URL
-
+ADD $APP_DOWNLOAD_URL /app.jar
+RUN sh -c 'touch /app.jar'
 EXPOSE 8080
 ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar"]
