--- a/build.gradle
+++ b/build.gradle
@@ -101,10 +101,10 @@ dependencies {
 
     compile 'org.springframework.cloud:spring-cloud-starter-eureka'
     compile 'org.springframework.cloud:spring-cloud-starter-consul-discovery'
-
     compile 'org.springframework.cloud:spring-cloud-starter-security'
 
 
+    compile 'org.springframework.boot:spring-boot-starter-aop'
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-actuator'
     compile 'org.springframework.boot:spring-boot-starter-data-redis'
