--- a/build.gradle
+++ b/build.gradle
@@ -79,7 +79,7 @@ dependencies {
         compile 'com.epam.reportportal:commons:3.0.0-BETA-2'
     } else {
         compile 'com.github.reportportal:commons-model:3.0.0-BETA-2'
-        compile('com.github.reportportal:commons-dao:3.0.0-BETA-7')
+        compile('com.github.reportportal:commons-dao:b4a1bbd')
         compile('com.github.reportportal:commons-rules:3.0.0-BETA-2')
         compile 'com.github.reportportal:commons:develop-SNAPSHOT'
     }
