--- a/build.gradle
+++ b/build.gradle
@@ -81,7 +81,7 @@ dependencies {
         compile ('com.github.reportportal:commons-model:develop-SNAPSHOT') { changing = true }
         compile('com.github.reportportal:commons-dao:4795a7c')
         compile('com.github.reportportal:commons-rules:3.0.0-RC1')
-        compile ('com.github.reportportal:commons:3.0.0-RC1')
+        compile ('com.github.reportportal:commons:develop-SNAPSHOT')
     }
 
     compile 'org.jasypt:jasypt:1.9.2'
