updated some api documentation updated version of model removed 'v2' from swagger path

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -42,3 +42,9 @@ eureka:
     register-with-eureka: false
     enabled: false
 ---
+
+springfox:
+  documentation:
+    swagger:
+      v2:
+        path: /api-docs
