--- a/build.gradle
+++ b/build.gradle
@@ -73,15 +73,15 @@ configurations.all {
 
 dependencies {
     if (releaseMode) {
-        compile 'com.epam.reportportal:commons-dao:3.0.0-RC1'
-        compile 'com.epam.reportportal:commons-rules:3.0.0-RC1'
-        compile 'com.epam.reportportal:commons-model:3.0.0-RC1'
-        compile 'com.epam.reportportal:commons:3.0.0-RC1'
+        compile 'com.epam.reportportal:commons-dao:3.0.0'
+        compile 'com.epam.reportportal:commons-rules:3.0.0'
+        compile 'com.epam.reportportal:commons-model:3.0.0'
+        compile 'com.epam.reportportal:commons:3.0.0'
     } else {
-        compile 'com.github.reportportal:commons-model:3.0.0-RC1'
-        compile('com.github.reportportal:commons-dao:3.0.0-RC1')
-        compile('com.github.reportportal:commons-rules:3.0.0-RC1')
-        compile 'com.github.reportportal:commons:3.0.0-RC1'
+        compile 'com.github.reportportal:commons-model:3.0.0'
+        compile('com.github.reportportal:commons-dao:3.0.0')
+        compile('com.github.reportportal:commons-rules:3.0.0')
+        compile 'com.github.reportportal:commons:3.0.0'
     }
 
     compile 'org.jasypt:jasypt:1.9.2'
