--- a/build.gradle
+++ b/build.gradle
@@ -58,8 +58,8 @@ repositories {
 
 dependencyManagement {
     imports {
-        mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Camden.SR6"
-        mavenBom "org.springframework.boot:spring-boot-dependencies:1.5.2.RELEASE"
+        mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Dalston.RELEASE"
+        mavenBom "org.springframework.boot:spring-boot-dependencies:1.5.3.RELEASE"
     }
 }
 
@@ -79,7 +79,7 @@ dependencies {
         compile 'com.epam.reportportal:commons:3.0.0'
     } else {
         compile 'com.github.reportportal:commons-model:ef3e95f'
-        compile('com.github.reportportal:commons-dao:2b1cb15')
+        compile('com.github.reportportal:commons-dao:f6a8052')
         compile('com.github.reportportal:commons-rules:3.0.0')
         compile ('com.github.reportportal:commons:develop-SNAPSHOT')
     }
