update mongo conf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,8 +22,8 @@ endpoints.health.sensitive=true
 rp.mongo.host=localhost
 rp.mongo.port=27017
 rp.mongo.dbName=reportportal
-#rp.mongo.user: user
-#rp.mongo.password: 1q2w3e
+rp.mongo.user=
+rp.mongo.password=
 rp.mongo.connectionsPerHost=50
 rp.mongo.threadsAllowedToBlockForConnectionMultiplier=50
 rp.mongo.connectTimeout=20000
